--- a/examples/dom/element_hashtml5.html
+++ b/examples/dom/element_hashtml5.html
@@ -8,7 +8,7 @@
 YUI().use('node', function (Y) {
     Y.Node.addMethod('hasHTML5', function(node) {
         var html5elements = 'article, aside, audio, bdi, canvas, command, ' +
-            'datalist, details, embed, figcaption, figure, footer, header, ' + 
+            'datalist, details, figcaption, figure, footer, header, ' + 
             'hgroup, keygen, mark, meter, nav, output, progress, rp, rt, ' + 
             'ruby, section, source, summary, time, video, wbr';
         
