--- a/examples/dom/element_pirate.html
+++ b/examples/dom/element_pirate.html
@@ -21,7 +21,7 @@ YUI().use('node', function (Y) {
         }
     };
     
-    demo.setContent('It is fun to talk like a pirate!');    
-    demo.setContent(demo.get('pirate'));
+    demo.setHTML('It is fun to talk like a pirate!');    
+    demo.setHTML(demo.get('pirate'));
 });
 </script>
