--- a/examples/events/on_available.html
+++ b/examples/events/on_available.html
@@ -10,7 +10,7 @@ YUI().use('*', function (Y) {
     }
     
     Y.on('available', function () {
-        Y.one('#demo').setContent('Sorry, I changed the div as fast as I could!');
+        Y.one('#demo').setHTML('Sorry, I changed the div as fast as I could!');
     }, '#demo');
 });
 </script>
