--- a/examples/loading/add_deps.html
+++ b/examples/loading/add_deps.html
@@ -10,7 +10,7 @@ YUI.add('hello', function (Y) {
     function setNodeMessage(node, html) {
         node = Y.one(node);
         if (node) {
-            node.setContent(html);
+            node.setHTML(html);
         }
     }
 
