--- a/examples/loading/use_basic.html
+++ b/examples/loading/use_basic.html
@@ -6,6 +6,6 @@
 <script src="http://yui.yahooapis.com/3.5.0/build/yui/yui-min.js"></script>
 <script>
 YUI().use('node', function (Y) {
-    Y.one('#demo').setContent('Whoa.');
+    Y.one('#demo').setHTML('Whoa.');
 });
 </script>
