--- a/examples/loading/use_local.html
+++ b/examples/loading/use_local.html
@@ -6,6 +6,6 @@
 <script src="/js/yui/build/yui/yui-min.js"></script>
 <script>
 YUI().use('node', function (Y) {
-    Y.one('#demo').setContent('All politics is local.');
+    Y.one('#demo').setHTML('All politics is local.');
 });
 </script>
