--- a/examples/loading/use_simpleyui.html
+++ b/examples/loading/use_simpleyui.html
@@ -5,5 +5,5 @@
 
 <script src="http://yui.yahooapis.com/3.5.0/build/simpleyui/simpleyui-min.js"></script>
 <script>
-Y.one('#demo').setContent('This message brought to you by SimpleYUI.');
+Y.one('#demo').setHTML('This message brought to you by SimpleYUI.');
 </script>
