--- a/examples/loading/use_simpleyui_sandboxed.html
+++ b/examples/loading/use_simpleyui_sandboxed.html
@@ -9,6 +9,6 @@ var message = 'BOGUS MESSAGE';
 
 (function () {
     var message = 'This message brought to you by sandboxed SimpleYUI.';
-    Y.one('#demo').setContent(message);
+    Y.one('#demo').setHTML(message);
 }());
 </script>
