--- a/examples/loading/use_synchronous.html
+++ b/examples/loading/use_synchronous.html
@@ -8,6 +8,6 @@
 YUI({
     bootstrap: false,
 }).use('*', function (Y) {
-    Y.one('#demo').setContent('Real Programmers manage their dependencies manually.');
+    Y.one('#demo').setHTML('Real Programmers manage their dependencies manually.');
 });
 </script>
