--- a/examples/ajax/io_fileupload.html
+++ b/examples/ajax/io_fileupload.html
@@ -25,7 +25,7 @@ YUI().use('io-upload-iframe', 'json-parse', function (Y) {
                 complete: function(id, response) {
                     var file = Y.JSON.parse(response.responseText),
                         msg = 'Uploaded: ' + file.name + ' (' + file.size + ' bytes)';
-                    Y.one('#uploaded').setContent(msg);
+                    Y.one('#uploaded').setHTML(msg);
                 }
             }
         });
