--- a/examples/infrastructure/widget_basic.html
+++ b/examples/infrastructure/widget_basic.html
@@ -38,8 +38,8 @@ YUI.add('electron', function (Y) {
         syncUI: function () {
             var energyStr = 'Energy: ' + this.get('energy').toPrecision(5) + ' MeV',
                 speedStr  = 'Speed: ' + this.getSpeed().toPrecision(5) + ' c';
-            this.get('contentBox').one('.en').setContent(energyStr);
-            this.get('contentBox').one('.sp').setContent(speedStr);
+            this.get('contentBox').one('.en').setHTML(energyStr);
+            this.get('contentBox').one('.sp').setHTML(speedStr);
         }
     }, {
         ATTRS: {
