--- a/examples/loading/add_capability.html
+++ b/examples/loading/add_capability.html
@@ -28,6 +28,6 @@ YUI({
 }).use('node', 'suitcase', function (Y) {
     var type = Y.Cookie ? 'battered, legacy' : 'sleek, ultra-modern';
     Y.Suitcase.set('foo', 'bar');
-    Y.one('#demo').setContent('In your ' + type + ' suitcase: ' + Y.Suitcase.get('foo'));
+    Y.one('#demo').setHTML('In your ' + type + ' suitcase: ' + Y.Suitcase.get('foo'));
 });
 </script>
