--- a/examples/loading/add_monkeypatching.html
+++ b/examples/loading/add_monkeypatching.html
@@ -22,6 +22,6 @@ YUI({
         }
     }
 }).use('node-base', function (Y) {
-    Y.one('#demo').setContent("Hmmm, setContent() is unusually fast these days.");
+    Y.one('#demo').setHTML("Hmmm, setHTML() is unusually fast these days.");
 });
 </script>
