--- a/examples/utilities/substituting_microtemplate.html
+++ b/examples/utilities/substituting_microtemplate.html
@@ -12,7 +12,7 @@
 </script>
 <script>
 YUI().use('node-base', function (Y) {
-    var template = Y.one('#template').getContent();
+    var template = Y.one('#template').getHTML();
     var people = [
         { name: 'John Carter', job: 'Adventurer', loc: 'Virginia', mate: 'Dejah Thoris' },
         { name: 'Dejah Thoris', job: 'Princess', loc: 'Helium', mate: 'John Carter' },
