Added note about relative base path.

--- a/examples/access/widget_intl.html
+++ b/examples/access/widget_intl.html
@@ -11,6 +11,7 @@ YUI({
     lang: 'fr, en', 
     groups: {
         'particles': {
+            // NOTE: On a local filesystem, change to './js/particles/'
             base: '/js/particles/',
             modules: {
                 'electron': {
