Added comments about relative paths.

--- a/examples/loading/add_monkeypatching.html
+++ b/examples/loading/add_monkeypatching.html
@@ -8,6 +8,7 @@
 YUI({
     groups: {
         patches: {
+            // NOTE: On a local filesystem, change to './js/patches/'
             base: '/js/patches/',
             modules: {
                 'node-patches' : {
