--- a/examples/loading/add_yui_config.html
+++ b/examples/loading/add_yui_config.html
@@ -4,6 +4,7 @@
 <div id="demo"></div>
 
 <script src="http://yui.yahooapis.com/3.5.0/build/yui/yui-min.js"></script>
+<!-- NOTE: On a local filesystem, change to './js/yui_config.js' -->
 <script src="/js/yui_config.js"></script>
 <script>
 YUI().use('reptiles-core', function (Y) {
