--- a/examples/loading/add_group.html
+++ b/examples/loading/add_group.html
@@ -8,6 +8,7 @@
 YUI({
     groups: {
         'local-modules': {
+            // NOTE: On a local filesystem, change to './js/local-modules/'
             base: '/js/local-modules/',
             modules: {
                 'reptiles-core': {
