--- a/examples/loading/use_local.html
+++ b/examples/loading/use_local.html
@@ -3,6 +3,7 @@
 
 <div id="demo"></div>
 
+<!-- NOTE: On a local filesystem, change to './js/yui/build/yui/yui-min.js' -->
 <script src="/js/yui/build/yui/yui-min.js"></script>
 <script>
 YUI().use('node', function (Y) {
